# DevPrism

./: .gitattributes  .gitignore  .gitnexusignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml
.devcouncil/: config.yaml  state.sqlite
apps/desktop/src-tauri/: CHANGELOG.md  Cargo.toml  Entitlements.plist  build.rs  symbols.map  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/devprism-skills/beamer-slides/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/beamer-slides/templates/: slides.tex
apps/desktop/src-tauri/resources/devprism-skills/latex-toolkit/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/latex-toolkit/templates/: preamble.tex
apps/desktop/src-tauri/resources/devprism-skills/manuscript-paper/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/manuscript-paper/templates/: article.tex  references.bib
apps/desktop/src-tauri/resources/devprism-skills/project-space/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/project-space/templates/: space-config.example.json  space-readme.md
apps/desktop/src-tauri/resources/devprism-skills/resume-cv/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/statement-authoring/: SKILL.md
apps/desktop/src-tauri/resources/devprism-skills/thesis/: SKILL.md
apps/desktop/src-tauri/src/: AGENTS.md  CLAUDE.md  agent_runtime.rs  anthropic_proxy.rs  app_nap.rs  claude.rs  claude_process.rs  comments.rs  export.rs  history.rs  latex.rs  latexdiff.rs  lib.rs  main.rs  personalization.rs  project_context.rs  project_import.rs  retry.rs  skills.rs  slash_commands.rs  uv.rs  variants.rs  wisdev.rs  zotero.rs
apps/desktop/src-tauri/src/.gitnexus/: meta.json
apps/desktop/src-tauri/src/agent/: cli.rs  mod.rs  redactor.rs
apps/desktop/src-tauri/src/agent/knowledge/: cache.rs  mod.rs  vector_store.rs
apps/desktop/src-tauri/src/agent/providers/: gemini.rs  mod.rs  ollama.rs
apps/desktop/src-tauri/src/agent/skills/: git.rs  mod.rs  resume.rs
apps/desktop/src-tauri/src/agent/tools/: env_insight.rs  git_insight.rs  mod.rs  semantic_search.rs
apps/desktop/src-tauri/src/anthropic_proxy/: messages.rs  providers.rs  stream.rs  tools.rs  transformers.rs
apps/desktop/src-tauri/src/native_agent/: mod.rs  ollama.rs  tools.rs
(+320 files in other folders)
